--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.3
 aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.6.0
+anyio==4.3.0
 attrs==23.2.0
 blinker==1.7.0
 cachetools==5.3.3
@@ -9,11 +10,15 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 dataclasses-json==0.6.4
+distro==1.9.0
 filelock==3.13.3
 frozenlist==1.4.1
 fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 huggingface-hub==0.22.2
 idna==3.6
 Jinja2==3.1.3
@@ -35,6 +40,7 @@ multidict==6.0.5
 mypy-extensions==1.0.0
 networkx==3.2.1
 numpy==1.26.4
+openai==0.28.0
 orjson==3.10.0
 packaging==23.2
 pandas==2.2.1
@@ -57,6 +63,7 @@ rpds-py==0.18.0
 safetensors==0.4.2
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 SQLAlchemy==2.0.29
 streamlit==1.33.0
 sympy==1.12
@@ -73,4 +80,5 @@ typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+watchdog==4.0.0
 yarl==1.9.4
